[package]
name = "test-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.11.2", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.19.0"
bevy_rapier2d = {version = "0.22.0", features = ["simd-stable", "debug-render-2d"]}
rand = "0.8.5"
